--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,21 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
+    android:background="#FFFFFF"
 
     tools:context="com.android.MakeYouStudy.LoginActivity">
 
-    <TextView
+    <ImageView
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/loadinimage"
-        />
+        android:background="@drawable/login_app_name" />
 
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center">
 
         <EditText
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/ed_password"
             android:layout_gravity="center"
-
+            android:background="@color/mainColor"
             android:text="로그인"
 
            />
@@ -58,7 +58,9 @@
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_below="@+id/bt_login"
-            android:text="회원가입"
+            android:text="회원가입  |"
+            android:gravity="right|center_vertical"
+            android:background="@color/nullColor"
             />
 
         <Button
@@ -67,7 +69,10 @@
             android:layout_height="50dp"
             android:layout_marginTop="138dp"
             android:layout_toRightOf="@+id/bt_signup"
-            android:text="비밀번호 찾기"
+            android:text="  비밀번호 찾기"
+            android:gravity="left|center_vertical"
+
+            android:background="@color/nullColor"
         />
 
 
