--- a/app/src/main/res/layout/time_box.xml
+++ b/app/src/main/res/layout/time_box.xml
@@ -4,6 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginLeft="10dp"
         >
         <Spinner
             android:id="@+id/day_spinner"
