--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#DDB897</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="highlight">#8ECBFF</color>
+    <color name="mainColor">#F7E3C3</color>
+    <color name="nullColor">#00ff0000</color>
 
 
     <color name="Mon">#8ECBFF</color>
