Update layout design
모든 layout design 마무리 했습니다.
App icon도 변경하였습니다.

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/edtDairy"
                 android:layout_width="match_parent"
                 android:layout_height="80sp"
-                android:background="#f9f5ea"
+                android:background="@color/lightyellow"
                 android:ems="10"
                 android:gravity="start|center_vertical"
                 android:inputType="text|textMultiLine|textCapSentences"
