--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="highlight">#8ECBFF</color>
     <color name="mainColor">#F7E3C3</color>
     <color name="nullColor">#00ff0000</color>
+    <color name="lightyellow">#f9f5ea</color>
 
 
     <color name="Mon">#8ECBFF</color>
