--- a/app/src/main/res/layout/activity_diary_update.xml
+++ b/app/src/main/res/layout/activity_diary_update.xml
@@ -14,13 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="제목을 입력하세요."
-        android:background="#e1f1cb"
+        android:background="@color/mainColor"
         android:layout_weight="5" />
     <EditText
         android:id="@+id/edit_contents_update"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#efedbf"
+        android:background="@color/lightyellow"
         android:lines="15"
         android:hint="내용을 입력하세요."
         android:gravity="top|left"
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="5"
-        android:background="#e1f1cb">
+        android:background="@color/mainColor">
 
         <Button
             android:layout_width="match_parent"
