--- a/app/src/main/res/layout/activity_machine_learning.xml
+++ b/app/src/main/res/layout/activity_machine_learning.xml
@@ -21,7 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/image_view"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:maxLines="5"
         android:text=""
         android:textSize="26dp"
