--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -47,12 +47,15 @@
         android:scaleType="fitXY" />
 
 </LinearLayout>
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="300dp"
-        android:layout_height="350dp"
+        android:layout_height="320dp"
         android:background="@drawable/image_add_2"
         android:layout_gravity="center"
         android:scaleType="fitXY" />
@@ -64,7 +67,7 @@
         android:text=""
         android:layout_below="@+id/te_textview"
         android:background="@drawable/logout_image"
-      />
+        />
 
     <Button
         android:id="@+id/bt_delect"
@@ -74,6 +77,10 @@
         android:text=""
         android:background="@drawable/delete_id"
         />
+
+
+</LinearLayout>
+
 
 </LinearLayout>
 
