Add exception handling

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -39,7 +39,7 @@
         android:text="" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageViewCount"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/ic_red"
