--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,7 +98,7 @@
                />
 
         <Button
-            android:id="@+id/goobtn"
+            android:id="@+id/googlbtnimage"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginTop="190dp"
@@ -106,7 +106,7 @@
 
             />
             <Button
-                android:id="@+id/testbutton"
+                android:id="@+id/facebookbtnimage"
                 android:layout_width="2000dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="240dp"
