Add loading dialog for image upload
Fix image matching function of ImageMatchingActivity

--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.android.MakeYouStudy.FindActivity">
+    tools:context="com.android.MakeYouStudy.FindActivity"
+    android:background="#FFFFFF">
 
     <ImageView
         android:id="@+id/imageView"
