--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -72,6 +72,15 @@
             android:background="@drawable/white_edittext"
             />
 
+        <TextView
+            android:id="@+id/tv_error_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF0000"
+            android:paddingLeft="5dp"
+            tools:text="테스트 " />
+
+
 
 
         <Button
