--- a/app/src/main/res/layout/activity_attendance_check.xml
+++ b/app/src/main/res/layout/activity_attendance_check.xml
@@ -11,47 +11,53 @@
     <ImageView
     android:id="@+id/imageView"
     android:layout_width="match_parent"
-    android:layout_height="452dp"
+    android:layout_height="400dp"
     android:scaleType="fitXY"
         android:src="@drawable/attendance_imageview" />
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="128dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:layout_gravity="center">
 
         <Button
             android:id="@+id/btnOpencv"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="120dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="7dp"
-            android:background="@drawable/btn_border"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@color/mainColor"
             android:drawableTop="@drawable/drawable_image_matching"
-            android:text="등록한 사진과 비교하기" />
+            android:text="등록한 사진과 비교하기"
+            style="?android:attr/borderlessButtonStyle"/>
 
         <Button
             android:id="@+id/btnCheck"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="120dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="7dp"
-            android:background="@drawable/btn_border"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:layout_marginLeft="1dp"
+            android:background="@color/mainColor"
             android:drawableTop="@drawable/drawable_image_label"
-            android:text="책상 인식하기" />
+            android:text="책상 인식하기"
+            style="?android:attr/borderlessButtonStyle"/>
 
         <Button
             android:id="@+id/btnTextCheck"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="120dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="7dp"
-            android:background="@drawable/btn_border"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:layout_marginLeft="1dp"
+            android:background="@color/mainColor"
             android:drawableTop="@drawable/drawable_image_text"
-            android:text="" />
+            android:text=""
+            style="?android:attr/borderlessButtonStyle"
+            />
 
 
     </LinearLayout>
