--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     >
 
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
     <TextView
         android:id="@+id/te_textview"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:gravity="center"
         android:textSize="15sp"
         android:text="현재 로그인 된 계정 "
@@ -31,19 +32,21 @@
 
     <Button
         android:id="@+id/takeapicture"
-        android:layout_width="350dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_toRightOf="@+id/bt_delect"
         android:background="@drawable/image_add2"
-        android:text="" />
+        android:text=""
+        android:layout_weight="10"/>
 
     <ImageView
         android:id="@+id/imageViewCount"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:background="@drawable/ic_red"
         android:layout_gravity="center"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:layout_weight="1"/>
 
 </LinearLayout>
 <LinearLayout
@@ -62,7 +65,7 @@
     <Button
         android:id="@+id/bt_logut"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:text=""
         android:layout_below="@+id/te_textview"
         android:background="@drawable/logout_image"
@@ -71,7 +74,7 @@
     <Button
         android:id="@+id/bt_delect"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_toRightOf="@+id/bt_logut"
         android:text=""
         android:background="@drawable/delete_id"
