--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,19 +14,19 @@
 
         <ImageView
             android:id="@+id/result"
-            android:layout_width="wrap_content"
+            android:layout_width="395dp"
             android:layout_height="50dp"
-            android:background="@drawable/app_name"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="@drawable/app_name" />
 
         <Button
 
             android:id="@+id/buttonProfile"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_weight="6"
             android:background="@drawable/ic_profile"
-            android:text=""
-            android:layout_weight="6"/>
+            android:text="" />
     </LinearLayout>
 
 
